completed hero section

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -68,8 +68,8 @@
     background: var(--mint-green);
     background: linear-gradient(
       0deg,
-      rgb(5, 10, 21) 0%,
-      rgb(192, 224, 222) 100%
+      rgba(5, 10, 21, 0.657) 0%,
+      rgba(192, 224, 222, 0.366) 100%
     );
     padding: 24px 33px;
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
