--- a/src/vars.css
+++ b/src/vars.css
@@ -4,8 +4,9 @@
   --ice-blue: #9eefe5;
   --mint-green: #c0e0de;
   --steel-blue: #4f7cac;
-  --color-bg: #050A15;
+  --color-bg: #050a15;
   --space-grey: #3c474b;
   /* fonts */
   --font-roboto: "Roboto";
+  --font-playfair: "playfair-display";
 }
