--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,9 @@
 @import "./vars.css";
 
 .App {
-    background-color: var(--color-bg);
-    width: 100%;
-    height: 100%;
-  
+  width: 100%;
+  height: 100%;
+  background-image: url(../assets/images/background.png);
+  background-position: fixed;
+  background-size: cover;
 }
