--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -44,8 +44,7 @@
   background-color: var(--ice-blue);
   color: var(--color-text);
   border-radius: 100px;
-  font-size: 20px;
-  font-weight: 600;
+  font-size: 25px;
   padding: 10px 18px;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
 }
@@ -74,15 +73,15 @@
 
 .topBlur {
   position: absolute;
-  width: 50vw;
-  height: 50vw;
-  min-width: 350px;
-  min-height: 350px;
-  top: -128px;
-  left: -10vw;
+  width: 30vw;
+  height: 30vw;
+  min-width: 250px;
+  min-height: 250px;
+  top: -100px;
+  left: -2vw;
   border-radius: 764px;
-  background: #3c474b;
-  filter: blur(100px);
+  background: #000000;
+  filter: blur(75px);
   z-index: 0;
 }
 
