completed about me section

--- a/src/vars.css
+++ b/src/vars.css
@@ -8,5 +8,5 @@
   --space-grey: #3c474b;
   /* fonts */
   --font-roboto: "Roboto";
-  --font-playfair: "playfair-display";
+  --font-playfair: "Playfair-Display";
 }
