added behavior and color to scrollbar

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -71,7 +71,7 @@
 
 @media screen and (max-width: 830px) {
   .container {
-    background-color: transparent;
+    /* background-color: transparent; */
     padding-left: 0;
     padding-right: 0;
   }
