--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -2,7 +2,7 @@
 
 .container {
   position: relative;
-  background-color: rgba(12, 12, 12, 0.6);
+  /* background-color: rgba(12, 12, 12, 0.6); */
   border-radius: 15px;
   padding: 73px;
   margin-top: 129px;
