--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -25,6 +25,22 @@
   
 }
 
+.topBtn {
+    text-decoration: none;
+    background-color: black;
+    color: var(--color-text);
+    font-family: var(--font-roboto);
+    border-radius: 100px;
+    font-size: 15px;
+    padding: 8px 16px;
+    box-shadow: 0 0 4px 0 #9eefe5;
+    cursor: pointer;
+  }
+
+  .topBtn:hover {
+    box-shadow: 0 0 10px #9eefe5;
+  }
+
 .links {
   display: flex;
   flex-direction: column;
@@ -43,9 +59,13 @@
   color: var(--color-text);
   font-family: var(--font-playfair);
   text-decoration: none;
-  font-size: 30px;
+  font-size: 25px;
   font-weight: 400;
   letter-spacing: 1.5px;
+}
+
+.link a:hover {
+  text-shadow: 1px 0 10px #ffffff;
 }
 
 .footerContainer {
