--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -16,6 +16,7 @@
   text-decoration: none;
   color: var(--ice-blue);
   font-family: var(--font-playfair);
+  text-shadow: 1px 1px 4px #ffffff;
 }
 
 .menu {
