--- a/src/components/Projects/ProjectCard.module.css
+++ b/src/components/Projects/ProjectCard.module.css
@@ -13,7 +13,7 @@
 .container:hover {
   color: #111;
   background: linear-gradient(180deg, #9eefe5cb 0%,
-  rgb(255, 255, 255) 100%);
+  rgba(255, 255, 255, 0.847) 100%);
   box-shadow: 0 0 100px #c0e0de;
   transform: scale(1.03);
 }
