--- a/src/index.css
+++ b/src/index.css
@@ -16,5 +16,5 @@ html {
 ::-webkit-scrollbar {
   width: 10px; /* Adjusts width*/
   height: 10px;
-  background-color: #050A15; /* Changes the thumb color */
+  background-color: black; /* Changes the thumb color */
 }
