--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -14,9 +14,9 @@
   font-size: 30px;
   font-weight: 600;
   text-decoration: none;
-  color: var(--ice-blue);
+  color: var(--color-text);
   font-family: var(--font-playfair);
-  text-shadow: 1px 1px 4px #ffffff;
+  text-shadow: 1px 1px 4px #9eefe5;
 }
 
 .menu {
@@ -34,6 +34,9 @@
   color: var(--color-text);
   font-family: var(--font-playfair);
   text-decoration: none;
+  /* text-shadow: 1px 1px 4px #9eefe5; */
+  -webkit-text-stroke: 1px #c0e0de;
+  
   
 }
 
