--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -3,6 +3,8 @@
 .container {
   margin-top: 76px;
   color: var(--color-text);
+  background-color: rgba(12, 12, 12, 0.6);
+  padding: 10px;
   margin-left: 10%;
   margin-right: 10%;
 }
