--- a/src/components/Resume/Resume.module.css
+++ b/src/components/Resume/Resume.module.css
@@ -2,7 +2,9 @@
 
 .container {
   color: var(--color-text);
-  margin-top: 79px;
+  background-color: rgba(12, 12, 12, 0.6);
+  padding: 10px;
+  margin-top: 76px;
   margin-left: 10%;
   margin-right: 10%;
 }
