--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,3 +1,4 @@
+/* styling for contact section */
 @import "../../vars.css";
 
 .container {
@@ -22,24 +23,23 @@
   color: var(--ice-blue);
   font-family: var(--font-roboto);
   font-size: 30px;
-  
 }
 
 .topBtn {
-    text-decoration: none;
-    background-color: black;
-    color: var(--color-text);
-    font-family: var(--font-roboto);
-    border-radius: 100px;
-    font-size: 15px;
-    padding: 8px 16px;
-    box-shadow: 0 0 4px 0 #9eefe5;
-    cursor: pointer;
-  }
+  text-decoration: none;
+  background-color: black;
+  color: var(--color-text);
+  font-family: var(--font-roboto);
+  border-radius: 100px;
+  font-size: 15px;
+  padding: 8px 16px;
+  box-shadow: 0 0 4px 0 #9eefe5;
+  cursor: pointer;
+}
 
-  .topBtn:hover {
-    box-shadow: 0 0 10px #9eefe5;
-  }
+.topBtn:hover {
+  box-shadow: 0 0 10px #9eefe5;
+}
 
 .links {
   display: flex;
@@ -68,6 +68,7 @@
   text-shadow: 1px 0 10px #ffffff;
 }
 
+/* styling for footer section */
 .footerContainer {
   margin-top: 120px;
   display: flex;
@@ -84,6 +85,7 @@
   font-family: var(--font-playfair);
 }
 
+/* styling for screen size */
 @media screen and (max-width: 830px) {
   .container {
     flex-direction: column;
@@ -96,7 +98,13 @@
     align-items: center;
   }
 
+  .text p {
+    font-size: 23px;
+  }
+
   .links {
+    display: flex;
     align-items: center;
+    padding: 0;
   }
 }
