--- a/src/components/Resume/Resume.module.css
+++ b/src/components/Resume/Resume.module.css
@@ -1,3 +1,4 @@
+/* styling for resume section */
 @import "../../vars.css";
 
 .container {
@@ -129,6 +130,7 @@
   margin-left: 17px;
 }
 
+/* styling for screen size */
 @media screen and (max-width: 830px) {
   .content {
     flex-direction: column;
