--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -5,6 +5,7 @@
   margin-top: 76px;
   color: var(--color-text);
   background-color: rgba(12, 12, 12, 0.6);
+  border-radius: 15px;
   padding: 10px;
   margin-left: 10%;
   margin-right: 10%;
