--- a/src/components/Resume/Resume.module.css
+++ b/src/components/Resume/Resume.module.css
@@ -4,6 +4,7 @@
 .container {
   color: var(--color-text);
   background-color: rgba(12, 12, 12, 0.6);
+  border-radius: 15px;
   padding: 10px;
   margin-top: 76px;
   margin-left: 10%;
